--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -60,7 +60,7 @@
                         </div>
                         </div>
                         <h3 class="title instructor-text">
-                        <a href="{% url 'course_details' slug=enrollment.course.slug %}"
+                        <a href="{% url 'course_playlist' course_slug=enrollment.course.slug %}"
                             >{{enrollment.course.title}}</a
                         >
                         </h3>
