--- a/templates/hero.html
+++ b/templates/hero.html
@@ -3,32 +3,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <div class="home-slide-face aos" data-aos="fade-up">
+          <div class="home-slide-face aos" data-aos="fade-up"  >
             <div class="home-slide-text">
               
               <h5 style="font-size: 30px;">Unlock Your Potential, Learn at Your Pace.</h5>
-            </div>
-            <div class="banner-content">
-              <form
-                class="form"
-                action="#"
-              >
-                <div class="form-inner">
-                  <div class="input-group">
-                    <i class="fa-solid fa-magnifying-glass search-icon"></i>
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Search School, Online eductional centers, etc"
-                    />                  
-                    <button class="btn btn-primary sub-btn" type="submit">
-                      <i class="fas fa-arrow-right"></i>
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-
+            </div>          
 
             
             <div class="trust-user">
@@ -51,7 +30,7 @@
         </div>
         <div class="col-md-5 d-flex align-items-center">
           <div class="girl-slide-img aos" data-aos="fade-up">
-            <img src="{% static 'assets/img/object.png' %}" alt />
+            <img src="{% static 'assets/hero-01.png' %}" alt />
           </div>
         </div>
       </div>
