--- a/templates/header.html
+++ b/templates/header.html
@@ -12,14 +12,14 @@
               </span>
             </a>
             <a href="{% url 'home' %}" class="navbar-brand logo">
-              <img src="{% static 'assets/img/logo.svg' %}" class="img-fluid" alt="Logo" />
+              <img src="{% static 'assets/ecourse-01.svg' %}" class="img-fluid" alt="Logo" />
             </a>
           </div>
           <div class="main-menu-wrapper">
             <div class="menu-header">
               <a href="{% url 'home' %}" class="menu-logo">
                 <img
-                  src="{% static 'assets/img/logo.svg' %}"
+                  src="{% static 'assets/ecourse-01.svg' %}"
                   class="img-fluid"
                   alt="Logo"
                 />
