--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,38 +26,32 @@
                 <div class="course-box d-flex aos" data-aos="fade-up">
                     <div class="product">
                     <div class="product-img">
-                        <a href="course-details.html">
+                        <a href="{% url 'course_playlist' course_slug=enrollment.course.slug %}">
                         <img
                             class="img-fluid"
                             alt
-                            src="{% static 'assets/img/course/course-01.jpg' %}"
+                            src="{{enrollment.course.banner.url}}"
                         />
                         </a>
                         <div class="price">
-                        <h3>$300 <span>$99.00</span></h3>
+                        <h3>{{enrollment.course.price}}&#2547;</h3>
                         </div>
                     </div>
                     <div class="product-content">
                         <div class="course-group d-flex">
                         <div class="course-group-img d-flex">
-                            <a href="instructor-profile.html"
-                            ><img
-                                src="{% static 'assets/img/user/user1.jpg' %}"
-                                alt
+                            <img
+                                src="{{enrollment.course.author.image.url}}"
+                                alt="{{enrollment.course.author.name}}"
                                 class="img-fluid"
-                            /></a>
+                            />
                             <div class="course-name">
                             <h4>
-                                <a href="instructor-profile.html">Nicole Brown</a>
+                                <a href="instructor-profile.html">{{enrollment.course.author.name}}</a>
                             </h4>
-                            <p>Instructor</p>
+                            <p>{{enrollment.course.author.designation}}</p>
                             </div>
-                        </div>
-                        <div
-                            class="course-share d-flex align-items-center justify-content-center"
-                        >
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        </div>
+                        </div>                      
                         </div>
                         <h3 class="title instructor-text">
                         <a href="{% url 'course_playlist' course_slug=enrollment.course.slug %}"
@@ -70,14 +64,14 @@
                             src="{% static 'assets/img/icon/icon-01.svg' %}"
                             alt
                             />
-                            <p>12+ Lesson</p>
+                            <p>{{enrollment.course.videos.all.count }} Lessons </p>
                         </div>
                         <div class="course-view d-flex align-items-center">
                             <img
                             src="{% static 'assets/img/icon/icon-02.svg' %}"
                             alt
                             />
-                            <p>9hr 30min</p>
+                            <p>{{enrollment.course.duration}} Hours</p>
                         </div>
                         </div>                 
                     
