--- a/templates/hero.html
+++ b/templates/hero.html
@@ -4,6 +4,21 @@
       <div class="row">
         <div class="col-md-7">
           <div class="home-slide-face aos" data-aos="fade-up" style="padding-top: 50px;" >
+              
+            <div class="container mt-3">
+              <form class="form-inline">
+                  <div class="input-group align-items-stretch">
+                      <input type="text" class="form-control" placeholder="Search Course,Category, Author etc  ">
+                      <div class="input-group-append">
+                          <button style="line-height: 2;" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
+                      </div>
+                  </div>
+              </form>
+          </div>
+         
+
+
+            
             <div class="col-md-5 d-flex align-items-center">
               <div class="girl-slide-img aos" data-aos="fade-up">
                 <img src="{% static 'assets/demo.webp' %}" alt />
