--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -137,8 +137,10 @@ body{
 </style>
 
 
-<h2 class="heading" style="margin-top: 110px;">Course Playlist {{course.title}}</h2>
+<div class="container">
+    <p style="margin-top: 110px;">Course Playlist {{course.title}}</p>
     
+</div>
 
 
     
