--- a/templates/course_card.html
+++ b/templates/course_card.html
@@ -15,7 +15,8 @@
             />
           </a>
           <div class="price">
-            <h3> {{ course.price }} &#2547;</h3>
+            <h3>{{ course.price|default:"Free" }} &#2547;</h3>
+
           </div>
         </div>
         <div class="product-content">
