--- a/lms/static/assets/css/custom.css
+++ b/lms/static/assets/css/custom.css
@@ -6,3 +6,26 @@
     min-width: 64px !important;
     padding: 9px 15px;
 }
+
+
+/* backto top */
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
