--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,10 @@
   </head>
   <body>
     <div class="main-wrapper">
+
       {% include 'header.html' %}      
 
-      
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i> Top</button>
       {% block content %}
         
       {% endblock content %}
@@ -87,6 +88,31 @@
       {% include 'footer.html' %}
    
     </div>
+
+
+
+    <script>
+      // Get the button
+      let mybutton = document.getElementById("myBtn");
+      
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function() {scrollFunction()};
+      
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+      
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+      </script>
+
 
    
     <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
