preview video is done

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -68,7 +68,7 @@
     
 <div class="container shadow-lg p-3 mb-5 bg-white rounded" style="margin-top: 130px;">  
     <h2>Register User Page</h2>
-    <p style="background-color: red; color:white;">Username & Password must be unique for creating an account. Without email verification, the account will be deleted after a few days.</p>
+    <p style="background-color: red; color:white;">Username & email must be unique for creating an account. Without email verification, the account will be deleted after a few days.</p>
     {% if form.errors %}
     <div class="alert alert-danger">
       <strong>Error:</strong> Please correct the errors below.
