--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -125,18 +125,6 @@
               {% endif %}
               
 
-
-
-<div id="videoModal" class="modal">
-<div class="modal-content">
-  <span class="close-modal">&times;</span>
-  <video id="previewVideo" controls>
-    Your browser does not support the video tag.
-  </video>
-</div>
-</div>
-
-
               </div>             
             </div>
           </div>       
@@ -233,6 +221,50 @@
   </section>
 
 
+
+<!-- Bootstrap CSS and JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Video Modal and JavaScript -->
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="videoModalLabel">Video Preview {{video.title}}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <video controls id="previewVideo" width="100%" height="auto">
+                    <source src="" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    $(document).ready(function() {
+        $('.video-preview').on('click', function() {
+            var videoUrl = $(this).data('src');
+            $('#previewVideo source').attr('src', videoUrl);
+            $('#previewVideo')[0].load();
+            $('#previewVideo')[0].play();
+            $('#videoModal').modal('show');
+        });
+
+        $('#videoModal').on('hidden.bs.modal', function () {
+            $('#previewVideo')[0].pause();
+            $('#previewVideo source').attr('src', '');
+        });
+    });
+
+    
+</script>
 
 
   
