--- a/templates/header.html
+++ b/templates/header.html
@@ -64,6 +64,7 @@
                 <a href="javascript:void(0)">{{request.user.username}}<i class="fas fa-chevron-down"></i></a>
                 <ul class="submenu">
                   <li><a href="{% url 'dashboard' %}">Enrolled Courses</a></li>                 
+                  <li><a href="{% url 'wishlist' %}">Wishlist Courses</a></li>                 
                   <li><a href="{% url 'custom_logout' %}">Saved Courses</a></li>                 
                   <li><a href="{% url 'custom_logout' %}">Logout</a></li> 
                           
